# i3lock-color

./: .gitignore  Makefile.am  README.md  _i3lock  api.c  api.h  build.sh  fonts.h  i3lock-bash  i3lock-zsh  i3lock.1  i3lock.c  i3lock.h  install-i3lock-color.sh  lock.sh  meson.build  meson_options.txt  random_screensaver.sh  unlock_indicator.c  unlock_indicator.h
examples/: lock.sh
m4/: ax_check_bash_completion.m4  ax_check_zsh_completion.m4
